# BioAgentic

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  Procfile  README.md  pyproject.toml  railway.json  start.sh
backend/: config.py  graph.py  prompts.py  server.py  state.py
backend/agents/: __init__.py  analyzer.py  debate.py  hypothesis.py  scouts.py
backend/agents/linking/: __init__.py  fulltext_extractor.py  link_validator.py  orchestrator.py  pubmed_linker.py  registry_enricher.py
backend/tools/: __init__.py  admet.py  clinical_trials.py  europe_pmc.py  pubmed.py  repositories.py  semantic_scholar.py
bioagentic/: __init__.py  config.py  graph.py  prompts.py  server.py
bioagentic/agents/: analyzer.py  debate.py  hypothesis.py
bioagentic/tools/: clinical_trials.py  semantic_scholar.py
frontend/: next.config.mjs  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.js  page.js
frontend/components/: ActivityTrace.js  AgentCard.js  AgentStream.js  ClarificationStep.js  FollowUpBar.js  Navbar.js  ReportView.js  ResearchForm.js  Sidebar.js
old_backend/: main.py
