[project]
name = "bioagentic"
version = "0.1.0"
description = "Agentic system for biotech research — clinical trials, literature mining, hypothesis generation & debate"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3.25",
    "langchain-core>=0.3.0",
    "litellm>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
